2015-02-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dom.el (dom-previous-sibling): New function.

2015-02-21  Paul Eggert  <eggert@cs.ucla.edu>

	* bindings.el (ctl-x-map): There is no 'C-;'.
	For now, make do with 'M-;'; this allows 'make bootstrap' to work.
	Perhaps some other binding should be chosen.
	Fixes: bug#19826

2015-02-21  Artur Malabarba  <bruce.connor.am@gmail.com>

	* bindings.el (ctl-x-map): Fix `comment-line' binding.  (Bug#19826)

2015-02-21  Michael Albinus  <michael.albinus@gmx.de>

	* autorevert.el (auto-revert-notify-add-watch)
	(auto-revert-notify-handler, auto-revert-buffers): Handle also
	buffers without an associated file, like dired buffers.  (Bug#16112)

2015-02-21  Dima Kogan  <dima@secretsauce.net>

	* autorevert.el (auto-revert-mode, auto-revert-tail-mode)
	(global-auto-revert-mode): Remove (let (auto-revert-use-notify) ... )
	wrappers.  Call (auto-revert-buffers) consequently in order to
	install handlers.

2015-02-21  Wilson Snyder  <wsnyder@wsnyder.org>

	Sync with upstream verilog-mode revision 0d6420b.
	* progmodes/verilog-mode.el (verilog-mode-version): Update.
	(vector-skip-list): Remove.
	(verilog-auto-inst-port, verilog-auto-inst-port-list)
	(verilog-auto-inst, verilog-auto-inst-param):
	Use arguments rather than vector-skip.
	(verilog-auto-inst-port): Fix AUTOINST interfaces to not show
	modport if signal attachment is itself a modport.  Reported by
	Matthew Lovell.

2015-02-21  Reto Zimmermann  <reto@gnu.org>

	Sync with upstream vhdl mode v3.37.1.  Add VHDL'08 support.
	* progmodes/vhdl-mode.el (vhdl-version, vhdl-time-stamp)
	(vhdl-doc-release-notes): Update.
	(vhdl-standard): Add VHDL'08 option.
	(vhdl-sensitivity-list-all): New option.
	(vhdl-directive-keywords): Add psl.
	(vhdl-offsets-alist-default, vhdl-mode-abbrev-table-init)
	(vhdl-template-construct-alist-init, vhdl-create-mode-menu):
	(vhdl-imenu-generic-expression): Add context, directive.
	(vhdl-offsets-alist, vhdl-mode, vhdl-doc-keywords): Doc fixes.